# AITechQATooL

./: README.md  pyproject.toml  setup.cfg
aitechqatool.egg-info/: PKG-INFO  SOURCES.txt
app/: core.py  main.py  ui.py
docs/: architecture.md
tests/: conftest.py  test_chrome_automation.py  test_generation.py  test_ui.py
